--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.blue-border-top {
+    border-top: 3px solid #007bff;
+    display: block;
+}
